# Psi_Unit_Firmware

./: .cursorrules  .gitignore  ARCHITECTURE.md  BOM.md  HARDWARE.md  LICENSE  README.md  TEST_CHECKLIST.md  USER_GUIDE.md
.cursor/skills/esp32-climate-controller/: SKILL.md  documentation-agent.md  reference.md
docs/: Psi_Unit_Wiring_Diagram.graphml
docs/ru/: BOM.md  README.md  USER_GUIDE.md
firmware/Psi_Unit_Firmware/: Psi_Unit_Firmware.ino  app_commands.cpp  app_commands.h  app_effects.cpp  app_effects.h  app_loop.cpp  app_loop.h  app_platform.cpp  app_platform.h  app_setup.cpp  app_setup.h  app_snapshot.cpp  app_snapshot.h  app_state.cpp  app_state.h  config.h  display_backend.h  display_backend_u8g2.cpp  display_ui.cpp  display_ui.h  i2c_bus.cpp  i2c_bus.h  input_backend.h  input_backend_hw.cpp  logic.cpp  logic.h  rgb_status.cpp  rgb_status.h  rtc_clock.cpp  rtc_clock.h  sensor_log.cpp  sensor_log.h  sensors.cpp  sensors.h  serial_cli.cpp  serial_cli.h  settings_access.cpp  settings_access.h  settings_field.cpp  settings_field.h  (+20 more)
licenses/: Encoder-MIT.txt  OneWire-MIT.txt
sim/: CMakeLists.txt  README.md  app_sim_loop.cpp  app_sim_setup.cpp  arduino_shim.cpp  build.ps1  config_sim.h  display_backend_sdl.cpp  display_backend_sdl.h  fetch_u8g2_font.ps1  input_backend_sim.cpp  input_backend_sim.h  main.cpp  sim_datetime.cpp  sim_domain.cpp  sim_host.cpp  sim_host.h  sim_platform.cpp  sim_rtc.cpp  sim_storage.cpp  sim_system_info.cpp  u8g2_font.c  u8g2_font_6x10_tr.c  u8g2_font_draw.cpp  u8g2_font_draw.h  u8g2_sim.h  u8g2_sim_glue.c
sim/include/: Adafruit_SHT31.h  Arduino.h  DallasTemperature.h  RTClib.h  Wire.h  display_backend_sim.h  sdl_win.h
tools/: sync_web_logo.ps1  sync_web_logo.py
